<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/title_bar" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:paddingTop="15dp">
        <TextView
            android:id="@+id/tv_left_activity_point_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/point_username"
            android:textSize="22sp"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/tv_left_activity_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/point_activity"
            android:textSize="22sp"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/tv_left_activity_point_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="22"
            android:textSize="22sp"
            android:textColor="@color/black"/>
    </LinearLayout>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/device"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:paddingTop="15dp"
        android:gravity="center_horizontal"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:paddingTop="5dp">

        <Button
            android:id="@+id/id_point_btn_10_chongzhi"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/btn_chongzhi"
            android:drawableLeft="@mipmap/vip"
            android:text="@string/point_10"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <Button
            android:id="@+id/id_point_btn_20_chongzhi"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:background="@drawable/btn_chongzhi"
            android:drawableLeft="@mipmap/vip"
            android:text="@string/point_20"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:paddingTop="20dp">

        <Button
            android:id="@+id/id_point_btn_50_chongzhi"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/btn_chongzhi"
            android:drawableLeft="@mipmap/vip"
            android:text="@string/point_50"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <Button
            android:id="@+id/id_point_btn_100_chongzhi"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:background="@drawable/btn_chongzhi"
            android:drawableLeft="@mipmap/vip"
            android:text="@string/point_100"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </LinearLayout>
</LinearLayout>