<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    >

    <LinearLayout
        android:id="@+id/pop_layout_single"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:background="@color/popwin"
        >

        <LinearLayout
            android:id="@+id/view_param_choh"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="25dp"
                android:text="@string/param_choh"
                android:textSize="15dip"
                android:gravity="center"
                android:textColor="@color/white"
                />
        </LinearLayout>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="0.2dp"
            android:background="@color/black"
            />

        <LinearLayout
            android:id="@+id/view_param_co2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="25dp"
                android:text="@string/param_co2"
                android:textSize="15dip"
                android:gravity="center"
                android:textColor="@color/white"
                />
        </LinearLayout>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="0.2dp"
            android:background="@color/black"
            />

        <LinearLayout
            android:id="@+id/view_param_pm10"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="25dp"
                android:text="@string/param_pm10"
                android:textSize="15dip"
                android:gravity="center"
                android:textColor="@color/white"
                />
        </LinearLayout>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="0.2dp"
            android:background="@color/black"
            />

        <LinearLayout
            android:id="@+id/view_param_pm25"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="25dp"
                android:text="@string/param_pm25"
                android:textSize="15dip"
                android:gravity="center"
                android:textColor="@color/white"
                />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>