<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/title_bar" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/id_user_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/user_username"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/id_user_username_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:text="@string/user_username"
                android:textSize="18sp" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="9dp"
            android:background="@mipmap/list_devider" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/id_user_gender"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/user_gender"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/id_user_gender_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:text="@string/user_gender"
                android:textSize="18sp" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="9dp"
            android:background="@mipmap/list_devider" />

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/id_user_age"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/user_age"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/id_user_age_value"
                android:layout_width="280dp"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:text="@string/user_age"
                android:textSize="18sp" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="9dp"
            android:background="@mipmap/list_devider" />

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/id_user_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/user_phone"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/id_user_phone_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:text="@string/user_phone"
                android:textSize="18sp" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="9dp"
            android:background="@mipmap/list_devider" />

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/id_user_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/user_email"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/id_user_email_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:text="@string/user_email"
                android:textSize="18sp" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="9dp"
            android:background="@mipmap/list_devider" />

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/id_user_point"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/user_point"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/id_user_point_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:text="@string/user_point"
                android:textSize="18sp" />
        </TableRow>
    </TableLayout>
</LinearLayout>