<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/title_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingTop="15dp">

        <TextView
            android:id="@+id/tv_left_activity_vip_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/point_username"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <ImageView
            android:id="@+id/left_vip_vip_image_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="10dp"
            android:src="@mipmap/vip_no"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/left_vip_vip_image_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="10dp"
            android:src="@mipmap/vip_24"
            android:visibility="gone" />
    </LinearLayout>
    <TextView
        android:id="@+id/tv_left_vip_info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/vip"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:paddingTop="15dp"
        android:gravity="center_horizontal"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:paddingTop="5dp">

        <Button
            android:id="@+id/id_vip_btn_chongzhi"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/btn_chongzhi"
            android:drawableLeft="@mipmap/vip"
            android:text="@string/vip_info"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textAlignment="center"/>
    </LinearLayout>
</LinearLayout>