<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    >

    <LinearLayout
        android:id="@+id/pop_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:background="@color/popwin"
        >

        <LinearLayout
            android:id="@+id/view_time_de"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            >
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@mipmap/time_de_white"
                android:scaleType="fitCenter"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="25dp"
                android:text="@string/time_de"
                android:textSize="15dip"
                android:gravity="center"
                android:textColor="@color/white"
                />
        </LinearLayout>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="0.2dp"
            android:background="@color/black"
            />

        <LinearLayout
            android:id="@+id/view_time_in"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            >
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@mipmap/time_in_white"
                android:scaleType="fitCenter"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="25dp"
                android:text="@string/time_in"
                android:textSize="15dip"
                android:gravity="center"
                android:textColor="@color/white"
                />
        </LinearLayout>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="0.2dp"
            android:background="@color/black"
            />

        <LinearLayout
            android:id="@+id/view_name_de"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            >
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@mipmap/name_de_white"
                android:scaleType="fitCenter"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="25dp"
                android:text="@string/name_de"
                android:textSize="15dip"
                android:gravity="center"
                android:textColor="@color/white"
                />
        </LinearLayout>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="0.2dp"
            android:background="@color/black"
            />

        <LinearLayout
            android:id="@+id/view_name_in"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            >
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@mipmap/name_in_white"
                android:scaleType="fitCenter"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="25dp"
                android:text="@string/name_in"
                android:textSize="15dip"
                android:gravity="center"
                android:textColor="@color/white"
                />
        </LinearLayout>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="0.2dp"
            android:background="@color/black"
            />

        <LinearLayout
            android:id="@+id/view_select_airq_de"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            >
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@mipmap/zhiliang_white"
                android:scaleType="fitCenter"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="25dp"
                android:text="@string/airq_de"
                android:textSize="15dip"
                android:gravity="center"
                android:textColor="@color/white"
                />
        </LinearLayout>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="0.2dp"
            android:background="@color/black"
            />

        <LinearLayout
            android:id="@+id/view_select_airq_in"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            >
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@mipmap/zhiliang_white"
                android:scaleType="fitCenter"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="25dp"
                android:text="@string/airq_in"
                android:textSize="15dip"
                android:gravity="center"
                android:textColor="@color/white"
                />
        </LinearLayout>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="0.2dp"
            android:background="@color/black"
            />

        <LinearLayout
            android:id="@+id/view_select_params"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            >
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@mipmap/params"
                android:scaleType="fitCenter"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="25dp"
                android:text="@string/select_params"
                android:textSize="15dip"
                android:gravity="center"
                android:textColor="@color/white"
                />
        </LinearLayout>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="0.2dp"
            android:background="@color/black"
            />

        <LinearLayout
            android:id="@+id/view_select_location"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            >
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@mipmap/select_location_white"
                android:scaleType="fitCenter"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="25dp"
                android:text="@string/select_location"
                android:textSize="15dip"
                android:gravity="center"
                android:textColor="@color/white"
                />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>